--- a/app/src/css/styles.css
+++ b/app/src/css/styles.css
@@ -9,15 +9,69 @@
     --primary: #1B264F;
     --secondary: #274690;
     --info: #8FD14F;
+    --success: #00D8B6;
+    --warning: #FFCB00;
+    --danger: #FF3860;
     --gray: #808080;
     --light: #EEF4ED;
     --white: #FFF;
+
+    --font-primary: "Open Sans", sans-serif;
+    --font-secondary: "IBM Plex Sans", sans-serif;
+}
+
+.mb-1 {
+    margin-bottom: 1rem;
+}
+
+.mb-2 {
+    margin-bottom: 2rem;
+}
+
+.mb-3 {
+    margin-bottom: 3rem;
+}
+
+.mt-1 {
+    margin-top: 1rem;
+}
+
+.mt-2 {
+    margin-top: 2rem;
+}
+
+.mt-3 {
+    margin-top: 3rem;
+}
+
+.mr-1 {
+    margin-right: 1rem;
+}
+
+.mr-2 {
+    margin-right: 2rem;
+}
+
+.mr-3 {
+    margin-right: 3rem;
+}
+
+.ml-1 {
+    margin-left: 1rem;
+}
+
+.ml-2 {
+    margin-left: 2rem;
+}
+
+.ml-3 {
+    margin-left: 3rem;
 }
 
 * {
     margin: 0;
     padding: 0;
-    font-family: 'IBM Plex Sans', sans-serif;
+    font-family: var(--font-secondary);
 }
 
 input {
@@ -90,7 +144,7 @@ a {
     font-size: 2.5rem;
     font-weight: bold;
     text-align: center;
-    font-family: 'Open Sans', sans-serif;
+    font-family: var(--font-primary);
 }
 
 .title-h3 {
@@ -98,8 +152,15 @@ a {
     font-size: 1.5rem;
     font-weight: 500;
     text-align: center;
-    margin-bottom: 3rem;
-    font-family: 'Open Sans', sans-serif;
+    font-family: var(--font-primary);
+}
+
+.title-h4 {
+    color: var(--primary);
+    font-size: 1.5rem;
+    font-weight: 500;
+    text-align: center;
+    font-family: var(--font-primary);
 }
 
 .input-group {
@@ -108,7 +169,7 @@ a {
     border-radius: 8px;
     margin-bottom: 2rem;
     padding: 0.3rem 0.8rem;
-    font-family: 'Open Sans', sans-serif;
+    font-family: var(--font-primary);
 }
 
 .input-icon {
@@ -173,7 +234,7 @@ a {
     font-weight: bold;
     margin-left: 1rem;
     transition: 0.2s ease-in-out;
-    font-family: "IBM Plex Sans", "sans-serif";
+    font-family: var(--font-secondary);
 }
 
 .axolotl {
@@ -186,9 +247,18 @@ a {
     margin-right: 3rem;
 }
 
+.nav-button {
+    display: none;
+    padding: 0;
+    margin: 0;
+    margin-right: 3rem;
+    background-color: transparent;
+    color: var(--light);
+    font-size: 2rem;
+}
+
 .link {
     color: var(--light);
-    margin: 0.5rem;
     font-weight: bold;
     border-bottom: 2px solid transparent;
     transition: 0.2s ease-in-out;
@@ -206,11 +276,18 @@ a {
 
 .footer {
     height: 150px;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .footer-link {
     color: var(--light);
     margin: 0.2rem 0;
+    transition: 0.2s ease-in-out;
+}
+
+.footer-link:hover {
+    color: var(--info);
 }
 
 .footer-links {
@@ -225,4 +302,72 @@ a {
     color: var(--light);
     margin: 0.5rem;
     font-size: 2rem;
+    transition: 0.2s ease-in-out;
+    cursor: pointer;
+}
+
+.social-icon:hover {
+    color: var(--info);
+}
+
+.btn-logout {
+    background-color: var(--danger);
+    color: var(--light);
+    border: 2px solid var(--danger);
+    padding: 0.4rem 1rem;
+    margin-left: 1rem;
+    transition: 0.2s ease-in-out;
+}
+
+@media screen and (max-width: 792px) {
+    .nav-links-active {
+        opacity: 1 !important;
+        visibility: visible !important;
+    }
+
+    .nav-links {
+        transition: 0.2s ease-in-out;
+        visibility: hidden;
+        opacity: 0;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+        position: absolute;
+        top: 100px;
+        background-color: var(--primary);
+        padding: 2rem 0;
+        border-top: var(--info) 2px solid;
+    }
+
+    .link {
+        margin: 1rem 0;
+    }
+
+    .nav-button {
+        display: block;
+    }
+    
+    .footer-links {
+        margin: 0 1rem;
+    }
+}
+
+@media screen and (max-width: 530px) {
+
+    .logo {
+        margin-left: 0.5rem;
+    }
+
+    .nav-button {
+        margin-right: 0.5rem;
+    }
+
+    .footer-links {
+        width: 100%;
+        margin: 2rem 0;
+    }
+
+    .footer {
+        height: 100%;
+    }
 }
