--- a/styles/style.css
+++ b/styles/style.css
@@ -42,7 +42,7 @@ nav{
     flex-direction: column;    
     justify-content: center;
     padding-left: 10%;
-    background-image: url(assets/header-1.jpg);
+    background-image: url(/assets/header-1.jpg);
     background-size: cover;
     background-position: center;
     color: #fff;
@@ -307,4 +307,97 @@ footer{
     color: #fff;
     padding: 30px;
     text-align: center;
+}
+
+/********* TURTLE PAGE ********/
+
+.animal-title{
+    background: var(--subTitle);
+    color: #fff;
+    padding: 20px;
+    padding-left: 10%;
+    margin: 30px 10% 20px 0;
+}
+
+/* Slider de imagenes */
+.animal-content{
+    display: flex;
+    margin: 20px 10%;
+}
+
+.animal-text{
+    width: 30%;
+    display: flex;
+    align-items: center;
+    color: var(--mainColor);
+}
+
+.animal-img{
+    margin: auto;
+    width: 50%;
+    padding: 30px;
+}
+
+ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+
+li{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+ul.slider{
+    position: relative;
+    width: 100%;
+    height: 300px;
+}
+
+ul.slider li{
+    position: absolute; 
+    left: 0;
+    top: 0;
+    opacity: 0;
+    width: inherit;
+    height: inherit;
+    transition: opacity .5s;
+}
+
+ul.slider li img{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+
+ul.slider li:first-child{
+    opacity: 1;
+}
+
+ul.slider li:target{
+    opacity: 1;
+}
+
+.menu{
+    text-align: center;
+    margin-top: 20px;
+}
+
+.menu li{
+    display: inline-block;
+    text-align: center;
+}
+
+.menu li a{
+    display: inline-block;
+    color: white;
+    text-decoration: none;
+    background-color: var(--mainColor);
+    width: 15px;
+    height: 15px;
+    font-size: 20px;
+    border-radius: 100%;
 }
